--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>au.com.nab</groupId>
     <artifactId>icommerce</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <description>NAB Assessment</description>
     <packaging>pom</packaging>
 
     <modules>
