--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -1,14 +1,15 @@
 version: '3.7'
 services:
   zookeeper:
-    image: debezium/zookeeper:${DEBEZIUM_VERSION}
+    image: debezium/zookeeper:1.4
     container_name: icommerce-zookeeper
     ports:
       - 2181:2181
       - 2888:2888
       - 3888:3888
+
   kafka:
-    image: debezium/kafka:${DEBEZIUM_VERSION}
+    image: debezium/kafka:1.4
     container_name: icommerce-kafka
     ports:
       - 9092:9092
@@ -16,6 +17,22 @@ services:
       - zookeeper
     environment:
       - ZOOKEEPER_CONNECT=zookeeper:2181
+
+  kafka-manager:
+    image: sheepkiller/kafka-manager
+    container_name: icommerce-kafka-manager
+    ports:
+      - 9000:9000
+    environment:
+      - ZK_HOSTS=zookeeper:2181
+      - APPLICATION_SECRET=letmein
+    links:
+      - kafka
+      - zookeeper
+    depends_on:
+      - kafka
+      - zookeeper
+
   mysql:
     image: mysql:8.0
     container_name: icommerce-mysql
@@ -27,6 +44,7 @@ services:
     volumes:
       - ./mysql/data:/var/lib/mysql
       - ./mysql/init:/docker-entrypoint-initdb.d/:ro
+
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3
     container_name: icommerce-elasticsearch
@@ -37,8 +55,9 @@ services:
       - transport.host=127.0.0.1
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+
   debezium:
-    image: debezium/connect-jdbc-es:${DEBEZIUM_VERSION}
+    image: debezium/connect-jdbc-es:1.4
     container_name: icommerce-debezium
     build:
       context: debezium
@@ -52,6 +71,27 @@ services:
     environment:
       - BOOTSTRAP_SERVERS=kafka:9092
       - GROUP_ID=1
-      - CONFIG_STORAGE_TOPIC=my_connect_configs
-      - OFFSET_STORAGE_TOPIC=my_connect_offsets
-      - STATUS_STORAGE_TOPIC=my_source_connect_statuses
+      - CONFIG_STORAGE_TOPIC=debezium_connect_configs
+      - OFFSET_STORAGE_TOPIC=debezium_connect_offsets
+      - STATUS_STORAGE_TOPIC=debezium_source_connect_statuses
+
+  redis:
+    image: redis:6.2.1-alpine
+    container_name: icommerce-redis
+    command: redis-server --appendonly yes
+    ports:
+      - 6379:6379
+    volumes:
+      - ./redis/data:/data
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    container_name: icommerce-redis-commander
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - 8081:8081
+    links:
+      - redis
+    depends_on:
+      - redis
