--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>protobuf-shared</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>au.com.nab</groupId>
+            <artifactId>common-shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
