--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - 2181:2181
       - 2888:2888
       - 3888:3888
+    networks:
+      - icommerce-network
 
   kafka:
     image: debezium/kafka:1.4
@@ -17,6 +19,12 @@ services:
       - zookeeper
     environment:
       - ZOOKEEPER_CONNECT=zookeeper:2181
+#      - KAFKA_LISTENERS=INSIDE://0.0.0.0:29092,OUTSIDE://0.0.0.0:9092
+#      - KAFKA_ADVERTISED_LISTENERS=INSIDE://kafka:29092,OUTSIDE://localhost:9092
+#      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+#      - KAFKA_INTER_BROKER_LISTENER_NAME=INSIDE
+    networks:
+      - icommerce-network
 
   kafka-manager:
     image: sheepkiller/kafka-manager
@@ -32,6 +40,8 @@ services:
     depends_on:
       - kafka
       - zookeeper
+    networks:
+      - icommerce-network
 
   mysql:
     image: mysql:8.0
@@ -44,6 +54,8 @@ services:
     volumes:
       - ./mysql/data:/var/lib/mysql
       - ./mysql/init:/docker-entrypoint-initdb.d/:ro
+    networks:
+      - icommerce-network
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3
@@ -55,6 +67,8 @@ services:
       - transport.host=127.0.0.1
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    networks:
+      - icommerce-network
 
   debezium:
     image: debezium/connect-jdbc-es:1.4
@@ -74,6 +88,8 @@ services:
       - CONFIG_STORAGE_TOPIC=debezium_connect_configs
       - OFFSET_STORAGE_TOPIC=debezium_connect_offsets
       - STATUS_STORAGE_TOPIC=debezium_source_connect_statuses
+    networks:
+      - icommerce-network
 
   redis:
     image: redis:6.2.1-alpine
@@ -83,6 +99,8 @@ services:
       - 6379:6379
     volumes:
       - ./redis/data:/data
+    networks:
+      - icommerce-network
 
   redis-commander:
     image: rediscommander/redis-commander:latest
@@ -95,3 +113,9 @@ services:
       - redis
     depends_on:
       - redis
+    networks:
+      - icommerce-network
+
+networks:
+  icommerce-network:
+    driver: bridge
