--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>customer-auditing-service</module>
         <module>common-shared</module>
         <module>product-auditing-service</module>
+        <module>product-auditing-worker</module>
     </modules>
 
     <properties>
