--- a/product-auditing-service/src/main/resources/application.yml
+++ b/product-auditing-service/src/main/resources/application.yml
@@ -5,6 +5,8 @@ grpc:
   port: 8501
 
 spring:
+  application:
+    name: product-auditing-service
   elasticsearch:
     rest:
       uris: localhost:9200
