--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,15 @@
         <module>common-shared</module>
         <module>product-auditing-service</module>
         <module>product-auditing-worker</module>
+        <module>api-gateway</module>
+        <module>discovery-server</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <spring-cloud.version>2020.0.2</spring-cloud.version>
 
         <grpc.version>1.37.0</grpc.version>
         <protobuf.version>3.15.8</protobuf.version>
@@ -85,6 +88,18 @@
         </dependency>
 
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <extensions>
