--- a/product-command-service/src/main/resources/application.yml
+++ b/product-command-service/src/main/resources/application.yml
@@ -22,3 +22,11 @@ spring:
         temp:
           use_jdbc_metadata_defaults: false
     show-sql: true
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+    enabled: true
+  instance:
+    preferIpAddress: true
