--- a/product-auditing-worker/src/main/resources/application.yml
+++ b/product-auditing-worker/src/main/resources/application.yml
@@ -13,10 +13,10 @@ spring:
 
 eureka:
   client:
-    serviceUrl:
+    service-url:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
   instance:
-    preferIpAddress: true
+    prefer-ip-address: true
 
 product-auditing-service:
   grpcserver:
