Update all projects, add common protobuf

--- a/product-command-service/pom.xml
+++ b/product-command-service/pom.xml
@@ -9,9 +9,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>write-product-service</artifactId>
-    <name>write-product-service</name>
-    <packaging>jar</packaging>
+    <artifactId>product-command-service</artifactId>
 
     <dependencies>
         <dependency>
