--- a/common-shared/pom.xml
+++ b/common-shared/pom.xml
@@ -12,4 +12,11 @@
 
     <artifactId>common-shared</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
