--- a/product-query-service/pom.xml
+++ b/product-query-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>read-product-service</artifactId>
+    <artifactId>product-query-service</artifactId>
 
     <dependencies>
         <dependency>
