Restructure api-gateway

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -11,3 +11,8 @@ eureka:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
   instance:
     preferIpAddress: true
+
+security:
+  facebook:
+    clientId: 98123841002394711283
+    clientSecret: 3DS9v9KWpt3TeCGWcISuOZOrMtunHn4c
