Update product services

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>api-gateway</module>
         <module>discovery-server</module>
         <module>order-service</module>
+        <module>customer-auditing-worker</module>
     </modules>
 
     <properties>
