Done project apis, config using backing services hosted on AWS

--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   application:
     name: customer-service
   datasource:
-    url: jdbc:mysql://localhost:3306/nab_customer
+    url: jdbc:mysql://52.77.250.133:3306/nab_customer
     username: root
     password: 123456789
   jpa:
