--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   application:
     name: order-service
   datasource:
-    url: jdbc:mysql://localhost:3306/nab_order
+    url: jdbc:mysql://52.77.250.133:3306/nab_order
     username: root
     password: 123456789
   jpa:
