--- a/customer-auditing-service/src/main/resources/application.yml
+++ b/customer-auditing-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     name: customer-auditing-service
   elasticsearch:
     rest:
-      uris: localhost:9200
+      uris: 52.77.250.133:9200
 
 eureka:
   client:
