--- a/product-command-service/src/main/resources/application.yml
+++ b/product-command-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   application:
     name: product-command-service
   datasource:
-    url: jdbc:mysql://localhost:3306/nab_product
+    url: jdbc:mysql://52.77.250.133:3306/nab_product
     username: root
     password: 123456789
   jpa:
