--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -33,7 +33,9 @@ services:
     environment:
       - http.host=0.0.0.0
       - transport.host=127.0.0.1
-      - xpack.security.enabled=false
+      - discovery.type=single-node
+      - xpack.security.enabled=true
+      - ELASTIC_PASSWORD=eEBrCXyeS6mmrZ7P
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     networks:
       - icommerce-network
