--- a/product-auditing-service/src/main/resources/application.yml
+++ b/product-auditing-service/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
   elasticsearch:
     rest:
       uris: 52.77.250.133:9200
+      username: elastic
+      password: eEBrCXyeS6mmrZ7P
 
 eureka:
   client:
